hphp/test/zend/good/zend-traits/bug61052.php.exp
HipHop Fatal error: unknown trait 't1' in hphp/test/zend/good/zend-traits/bug61052.php on line 8
